RESOLVED FIXED279941
REGRESSION(283487@main): Unexpected scrolling occurs when resizing PDF window
https://bugs.webkit.org/show_bug.cgi?id=279941
Summary REGRESSION(283487@main): Unexpected scrolling occurs when resizing PDF window
Abrar Rahman Protyasha
Reported 2024-09-18 17:47:39 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2024-09-18 17:54:29 PDT
EWS
Comment 2 2024-09-18 18:29:16 PDT
Committed 283879@main (6b4558908ef8): <https://commits.webkit.org/283879@main> Reviewed commits have been landed. Closing PR #33870 and removing active labels.
EWS
Comment 3 2024-09-19 09:07:24 PDT
Committed 283286.94@safari-7620-branch (255dd0dec5a2): <https://commits.webkit.org/283286.94@safari-7620-branch> Reviewed commits have been landed. Closing PR #1845 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.