REGRESSION(283487@main): Unexpected scrolling occurs when resizing PDF window https://bugs.webkit.org/show_bug.cgi?id=279941 rdar://136256301

Reviewed by Aditya Keerthi.

In 283487@main, we introdcued a behavior change in the PDF document
layout updates, where we would force document layout page scale updates
whenever the page geometry changed. The intention was to ensure a
document layout page scale update on every encrypted document unlock.
However, we already plumb through ShouldUpdateAutoSizeScale::Yes when we
ask for a layout update after unlocking an encrypted document. As such,
this behavior change is unnecessary and expectedly problematic when we
resize the window.

This patch partially reverts said behavior.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDocumentLayout.mm:
(WebKit::PDFDocumentLayout::updateLayout):

Canonical link: https://commits.webkit.org/283879@main